# cfdydns

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: release.yml
src/: cloudflare.rs  main.rs
