[package]
name = "cfdydns"
version = "0.1.0"
edition = "2021"
description = "Cloudflare dynamic DNS client"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive", "env"] }
colored = "2.1.0"
env_logger = "0.11.3"
log = "0.4.21"
reqwest = { version = "0.12.4", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.200", features = ["derive"] }
